Padding fix for footer nav on mobile

--- a/html/themes/custom/emat/components/_patterns/02-molecules/menus/inline-nav/_inline-nav.scss
+++ b/html/themes/custom/emat/components/_patterns/02-molecules/menus/inline-nav/_inline-nav.scss
@@ -9,6 +9,8 @@
 
   &__item {
     margin-right: $space-double;
+    margin-top: $space-one-half;
+    margin-bottom: $space-one-half;
     display: inline-flex;
 
     &:last-child {
